# indicato-rs

./: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
scripts/: gen_parity_fixtures.py
src/: lib.rs  tradingview.rs
src/tradingview/: expanded.rs  tv_features.rs  validated.rs
tests/: talib_parity.rs  talib_parity_ht.rs  tradingview_golden.rs  upstream_talib_compare.rs
tests/fixtures/: talib_parity.json
tests/fixtures/tradingview_expected/: README.md  adaptive_baseline.csv  anchored_vwap.csv  darvas_turtle_breakout.csv  heikin_ashi_transform.csv  ichimoku_cloud_state.csv  mariashi_renko_system.csv  momentum_vol_composite.csv  ohlcv.csv  pending.tsv  self_strength_oscillator.csv  volume_liquidity_sweep.csv  volumetric_trend_ribbon.csv  wyckoff_phase.csv
