[package]
name = "indicato-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Jake"]
license = "MIT AND BSD-3-Clause"
description = "Warmup-exact Rust port of TA-Lib batch technical indicators"
repository = "https://github.com/Jakeelamb/indicato-rs"
documentation = "https://docs.rs/indicato-rs"
readme = "README.md"
keywords = ["talib", "technical-analysis", "indicators", "trading", "candlestick"]
categories = ["algorithms", "science"]
exclude = ["target/**", "artifacts/**"]

[dependencies]

[dev-dependencies]
serde_json = "1"
talib-rs = { version = "0.1.2", default-features = false }

[lib]
name = "indicato_rs"
path = "src/lib.rs"
